--- a/index.html
+++ b/index.html
@@ -7,12 +7,13 @@
     <script src="https://www.gstatic.com/firebasejs/9.0.0/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/9.0.0/firebase-database.js"></script>
     <link rel="manifest" href="./manifest.json">
-    <script src="./app.js"></script>
 </head>
 <body>
     <h2> Current Location </h2>
+    <button id="startBtn"> Start Tracking </button>
     <p id="status"> Waiting for permission </p>
+    <script src="./app.js"></script>
 </body>
 </html>
 
-<!--redeploy-->
+
