--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
     <link rel="manifest" href="./manifest.json">
 </head>
 <body>
-     <script src="https://www.gstatic.com/firebasejs/9.0.0/firebase-app.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/9.0.0/firebase-database.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-database.js"></script>
     <h2> Current Location </h2>
     <button id="startBtn"> Start Tracking </button>
     <p id="status"> Waiting for permission </p>
-    <script src="./app.js"></script>
+    <script src="app.js"></script>
 </body>
 </html>
 
